--- a/css/style.css
+++ b/css/style.css
@@ -2,15 +2,7 @@ html {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   min-width: 1146px;
-
-
-background: url("../img/gllacy-index.jpg") no-repeat center top; 
-
-
-
 }
-
-
 *,
 *::before,
 *::after {
@@ -34,10 +26,6 @@ body {
   background-color: #849d8f;
   font-family: Roboto, Arial, sans-serif;
   color: white;
-
-           opacity: 0.5
-
-
 }
 .body-bg {
   background-image: url("../img/ice_raspberries_bar_slide1.png");
@@ -455,6 +443,7 @@ a.sub-new::after {
   );
   background: -webkit-linear-gradient(top, #f26843 0%, #e74a35 100%);
   background: -o-linear-gradient(top, #f26843 0%, #e74a35 100%);
+  background: -webkit-gradient(linear, left top, left bottom, from(#f26843), to(#e74a35));
   background: linear-gradient(to bottom, #f26843 0%, #e74a35 100%);
   -webkit-box-shadow: 0 2px 2px rgba(172, 16, 0, 0.64);
   box-shadow: 0 2px 2px rgba(172, 16, 0, 0.64);
@@ -541,19 +530,9 @@ a.sub-new::after {
 }
 .site-wrapper {
   min-width: 940px;
-/*  background-color: #849d8f;
-  background-image: url("../img/ice_raspberries_bar_slide1.png");
-  background-repeat: no-repeat;
-  background-position: top center;
-  -webkit-transition: background-image 0.5s ease, background-color 0.5s ease;
-  -o-transition: background-image 0.5s ease, background-color 0.5s ease;
-  transition: background-image 0.5s ease, background-color 0.5s ease; */
-
-
   z-index: 5;
   margin-top: -141px;
 }
-
 .site-wrapper::before,
 .site-wrapper::after {
   content: "";
@@ -610,6 +589,7 @@ a.sub-new::after {
   );
   background: -webkit-linear-gradient(top, #f26843 0%, #e74a35 100%);
   background: -o-linear-gradient(top, #f26843 0%, #e74a35 100%);
+  background: -webkit-gradient(linear, left top, left bottom, from(#f26843), to(#e74a35));
   background: linear-gradient(to bottom, #f26843 0%, #e74a35 100%);
   border-radius: 50px;
   -webkit-box-shadow: 0 2px 2px rgba(172, 16, 0, 0.64);
@@ -635,6 +615,7 @@ a.sub-new::after {
   );
   background: -webkit-linear-gradient(top, #f58669 0%, #ec6f5e 100%);
   background: -o-linear-gradient(top, #f58669 0%, #ec6f5e 100%);
+  background: -webkit-gradient(linear, left top, left bottom, from(#f58669), to(#ec6f5e));
   background: linear-gradient(to bottom, #f58669 0%, #ec6f5e 100%);
   -webkit-box-shadow: 0 2px 2px rgba(172, 16, 0, 1);
   box-shadow: 0 2px 2px rgba(172, 16, 0, 1);
@@ -657,6 +638,7 @@ a.sub-new::after {
   );
   background: -webkit-linear-gradient(top, #d84732 0%, #e1613e 100%);
   background: -o-linear-gradient(top, #d84732 0%, #e1613e 100%);
+  background: -webkit-gradient(linear, left top, left bottom, from(#d84732), to(#e1613e));
   background: linear-gradient(to bottom, #d84732 0%, #e1613e 100%);
   -webkit-box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
   box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
@@ -677,24 +659,6 @@ a.sub-new::after {
   border-radius: 50%;
   cursor: pointer;
 }
-
-
-/*
-#product-1:checked ~ .site-wrapper {
-  background-color: #849d8f;
-  background-image: url("../img/ice_raspberries_bar_slide1.png");
-}
-#product-2:checked ~ .site-wrapper {
-  background-color: #8996a6;
-  background-image: url("../img/ice_chocolate_bar_slide2.png");
-}
-#product-3:checked ~ .site-wrapper {
-  background-color: #9d8b84;
-  background-image: url("../img/ice_strawberry_bar_slide3.png");
-}
-*/
-
-
 #product-1:checked ~ .site-wrapper #slide1,
 #product-2:checked ~ .site-wrapper #slide2,
 #product-3:checked ~ .site-wrapper #slide3 {
@@ -1684,28 +1648,3 @@ a.sub-new::after {
 .copyright a {
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
-
-
-
-
-
-  /* ----------------*/ 
-
-/*
-  width: 1146px;
-  top: 1px;
-  border-top: 5px solid red;
-rgba(255, 255, 255, 0.3)
-
-.basket-table .popup-close::before {
-  content: "";
-  position: absolute;
-  top: 11px;
-  left: 5px;
-  width: 11px;
-  height: 11px;
-  background-image: url("../img/cross_small.svg");
-  background-repeat: no-repeat;
-  background-position: 0 0;
-}*/
-
