--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ img {
 .main-item {
   margin-right: 6px;
 }
-.main-menu li:hover {
+.main-menu li:not(.sub-menu-current):hover {
   background-color: white;
   border-radius: 20px;
 }
@@ -133,7 +133,7 @@ img {
   -webkit-box-shadow: inset 0 2px 1px #696969;
   box-shadow: inset 0 2px 1px #696969;
 }
-.sub-menu a:hover {
+.sub-menu a:not(.link-current):hover {
   background-color: #fbded7;
 }
 .sub-menu a:active {
@@ -188,9 +188,9 @@ a.sub-new::after {
   padding-top: 8px;
   padding-bottom: 12px;
 }
-.sub-menu a:hover {
-  background-color: #fbded7;
-}
+/* .sub-menu a:hover { */
+  /* background-color: #fbded7; */
+/* } */
 .sub-menu a:active {
   background-color: #f6b5a5;
 }
@@ -221,16 +221,26 @@ a.sub-new::after {
   margin: 29px 0px 0px auto;
   z-index: 5;
 }
+.user-data {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+} 
 .breadcrumbs {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
+.search,
+.login-site,
+.basket {
+  position: relative;
+}
 .user-data .popup-search {
   display: none;
   position: absolute;
-  top: 59px;
-  right: 240px;
+  top: 30px;
+  right: 8px;
   width: 341px;
   height: 84px;
   border-radius: 5px;
@@ -239,14 +249,14 @@ a.sub-new::after {
   -webkit-box-shadow: 0 20px 20px rgba(0, 0, 0, 0.4);
   box-shadow: 0 20px 20px rgba(0, 0, 0, 0.4);
 }
-.user-data form.search-inner {
+/*.user-data form.search-inner {
   position: absolute;
   right: 257px;
-}
-.user-data section.login-inner {
+} */
+/*.user-data section.login-inner {
   position: absolute;
   right: 155px;
-}
+} */
 .search-site:hover + .popup-search,
 .search-site:focus + .popup-search,
 .login:hover + .popup-login-form,
@@ -267,8 +277,8 @@ a.sub-new::after {
   background-color: #f8f7f4;
   -webkit-box-shadow: 0 20px 20px rgba(0, 0, 0, 0.4);
   box-shadow: 0 20px 20px rgba(0, 0, 0, 0.4);
-  top: 59px;
-  right: 135px;
+  top: 30px;
+  right: 10px;
   width: 277px;
   height: 214px;
   padding: 20px 18px;
@@ -331,14 +341,13 @@ a.sub-new::after {
   border: 2px solid rgba(46, 136, 228, 0.52);
 }
 .user-block .search-site {
-  position: relative;
   padding: 5px 14px 8px 17px;
   background-color: #9db1a5;
   border-radius: 50%;
 }
 .search-site svg {
   position: absolute;
-  top: 7px;
+  top: 1px;
   left: 7px;
 }
 .user-block .search-site,
@@ -347,7 +356,6 @@ a.sub-new::after {
 }
 .user-block .login,
 .user-block .user-basket {
-  position: relative;
   padding: 7px 15px 8px 44px;
   font-size: 14px;
   line-height: 1.142;
@@ -357,7 +365,7 @@ a.sub-new::after {
   color: white;
 }
 .user-block .user-basket-red {
-  position: relative;
+  /* position: relative; */
   padding: 7px 15px 8px 44px;
   font-size: 14px;
   line-height: 1.142;
@@ -370,25 +378,25 @@ a.sub-new::after {
 .user-basket svg,
 .user-basket-red svg {
   position: absolute;
-  top: 5px;
+  top: 0px;
   left: 16px;
 }
 .login a {
   background: url("../img/entrance.svg") no-repeat;
 }
-.basket a:first-child {
+/*.basket a:first-child {
   font-size: 14px;
   line-height: 1.142;
   font-weight: 500;
   background: url("../img/basket_red.svg") no-repeat;
   background-color: white;
   color: #323232;
-}
+} */
 .popup-basket {
   display: none;
   position: absolute;
   padding-top: 12px;
-  right: 30px;
+  right: 0px;
   z-index: 10;
 }
 .basket-container {
@@ -1046,13 +1054,12 @@ a.sub-new::after {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  margin-bottom: 21px;
+  margin-bottom: 49px;
 }
 .price-item {
   width: 267px;
   text-align: center;
   position: relative;
-  margin-bottom: 10px;
 }
 .hit-item::before {
   content: "";
@@ -1068,7 +1075,7 @@ a.sub-new::after {
   border-radius: 50%;
 }
 .price h2 {
-  margin: 6px 0 27px 0;
+  margin: 6px 0 9px 0;
   line-height: 0.8;
 }
 .price-goods {
@@ -1097,11 +1104,13 @@ a.sub-new::after {
   padding-left: 35px;
 }
 .price-heading a {
+	position: relative;
   font-size: 16px;
   line-height: 1.375;
   font-weight: 500;
   color: #fff;
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+	z-index: 2;
 }
 .price-button {
   display: none;
@@ -1113,39 +1122,44 @@ a.sub-new::after {
   padding: 11px 19px;
   border-radius: 23px;
   background-color: #e84d37;
+	z-index: 2;
 }
-.price-item:hover,
-.price-item:focus {
-  margin-bottom: -72px;
-  padding-bottom: 72px;
-  z-index: 20;
-  width: 277px;
-  min-height: 405px;
-  background-color: rgba(248, 247, 244, 0.2);
-  -webkit-box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
-  box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
-  border-radius: 5px;
+.price-item:hover::after,
+.price-item:focus::after {
+	margin-bottom: -72px;
+	padding-bottom: 72px;
+	content: "";
+	position: absolute;
+	top: -5px;
+	left: -13px;
+	width: 293px;
+	min-height: 405px;
+	background-color: rgba(248, 247, 244, 0.2);
+	-webkit-box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
+	box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
+	border-radius: 5px;
+	z-index: 1;
 }
 .price-item:hover .price-button,
 .price-item:focus .price-button {
   display: block;
 }
 .features-block {
-  padding-top: 25px;
-  padding-left: 20px;
-  margin-top: -21px;
-  margin-bottom: 40px;
-  width: 1146px;
-  min-height: 306px;
-  background: #f1e5cb url("../img/features_bg.jpg");
-  border-radius: 15px;
+	padding-top: 25px;
+	padding-left: 20px;
+	margin-top: -21px;
+	margin-bottom: 40px;
+	width: 1146px;
+	min-height: 306px;
+	background: #f1e5cb url("../img/features_bg.jpg");
+	border-radius: 15px;
 }
 .features-block p:first-child {
-  margin: 0;
-  font-size: 24px;
-  line-height: 1.25;
-  font-weight: 500;
-  color: #323232;
+	margin: 0;
+	font-size: 24px;
+	line-height: 1.25;
+	font-weight: 500;
+	color: #323232;
 }
 .features-block ul {
   font-size: 16px;
@@ -1406,8 +1420,8 @@ a.sub-new::after {
   transform: rotate(-45deg);
 }
 .map-contacts {
-  position: absolute;
-  right: 27px;
+  position: relative;
+  right: -845px;
   top: 62px;
   width: 302px;
   min-height: 305px;
@@ -1607,6 +1621,8 @@ a.sub-new::after {
 .popup-autorization a:hover,
 .price-item a:first-child:hover,
 .price-item a:first-child:focus,
+.blog a:hover,
+.blog a:focus,
 .breadcrumbs a:hover,
 .breadcrumbs a:focus,
 .footer-info a:focus,
